# AdventOfCode

./: .gitignore  Readme.md
2021/day1/: main.cpp
2021/day10/: main.cpp
2021/day11/: main.cpp
2021/day12/: main.cpp
2021/day13/: main.cpp
2021/day14/: main.cpp
2021/day15/: main.cpp
2021/day16/: main.cpp
2021/day17/: main.cpp  test.cpp
2021/day18/: main.cpp  main.py
2021/day19/: main.cpp
2021/day2/: main.cpp
2021/day20/: main.cpp
2021/day21/: main.cpp  part2.py
2021/day22/: main.cpp
2021/day25/: main.cpp
2021/day3/: main.cpp
2021/day4/: main.cpp
2021/day5/: main.cpp
2021/day6/: main.cpp
2021/day7/: main.cpp
2021/day8/: main.cpp
2021/day9/: main.cpp
2022/day01/src/: main.rs
2022/day02/src/: main.rs
2022/day03/src/: main.rs
2022/day04/day05/: Cargo.toml
2022/day04/src/: main.rs
2022/day05/src/: main.rs
2022/day06/src/: main.rs
2022/day07/src/: main.rs
2022/day08/src/: main.rs
2022/day09/: Cargo.toml
2022/day09/src/: main.rs
2022/day10/src/: main.rs
2022/day11/src/: main.rs
2022/day12/src/: main.rs
2022/day13/src/: main.rs
2022/day14/src/: main.rs
2022/day15/: Cargo.toml
2022/day15/src/: main.rs
2022/day16/src/: main.rs
2022/day17/src/: main.rs
2023/: .gitignore  aoc2023.cabal
2023/01/: main.hs
2023/02/: main.hs
2023/03/: main.hs
2023/04/: main.hs
2023/05/: main.hs
2023/06/: main.hs
2023/07/: main.hs
2023/08/: main.hs
2023/09/: main.hs
2023/10/: main.hs
2023/11/: main.hs
2023/12/: main.hs
2023/13/: main.hs
2023/14/: main.hs
2023/15/: main.hs
2023/16/: main.hs
2023/17/: main.hs
2023/18/: main.hs
2023/19/: main.hs
2023/20/: main.hs
2023/21/: main.hs
2023/22/: main.hs
2024/: project.clj
2024/src/aoc2024/: day01.clj  day02.clj  day03.clj  main.clj
2025/day01/src/: main.rs
2025/day02/src/: main.rs
2025/day03/src/: main.rs
2025/day04/: Cargo.toml
2025/day04/src/: main.rs
2025/day05/src/: main.rs
2025/day06/src/: main.rs
