cabal-version:      2.4
name:               aoc2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Pol Eyschen
maintainer:         poleyschen@gmail.com


executable Day01
    main-is:          main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        time

    hs-source-dirs:   01
    default-language: Haskell2010

executable Day02
    main-is:          main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        parsec,
        time

    hs-source-dirs:   02
    default-language: Haskell2010

executable Day03
    main-is:          main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        containers,
        time

    hs-source-dirs:   03
    default-language: Haskell2010



executable Day04
    main-is:          main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        parsec,
        time

    hs-source-dirs:   04
    default-language: Haskell2010

executable Day05
    main-is:          main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        split,
        containers,
        time

    hs-source-dirs:   05
    default-language: Haskell2010

executable Day06
    main-is:          main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        time

    hs-source-dirs:   06
    default-language: Haskell2010

executable Day07
    main-is:          main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        time

    hs-source-dirs:   07
    default-language: Haskell2010

executable Day08
    main-is:          main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        time,
        parsec,
        containers

    hs-source-dirs:   08
    default-language: Haskell2010

executable Day09
    main-is:          main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        time,

    hs-source-dirs:   09
    default-language: Haskell2010

executable Day10
    main-is:          main.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        time,
        array

    hs-source-dirs:   10
    default-language: Haskell2010


executable Day11
    main-is:          main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        time

    hs-source-dirs:   11
    default-language: Haskell2010